@@ -50,6 +50,7 @@ spotless {
 tasks {
     test {
         forkEvery = 1
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
     }
 }
 
